; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_merge_detect_rename.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_merge_detect_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_options = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.merge_options*)* @merge_detect_rename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @merge_detect_rename(%struct.merge_options* %0) #0 {
  %2 = alloca %struct.merge_options*, align 8
  store %struct.merge_options* %0, %struct.merge_options** %2, align 8
  %3 = load %struct.merge_options*, %struct.merge_options** %2, align 8
  %4 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp sge i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.merge_options*, %struct.merge_options** %2, align 8
  %9 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %7
  %13 = phi i64 [ %10, %7 ], [ 1, %11 ]
  %14 = trunc i64 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
